# backend/app/Http/Requests/Warehouses/WarehousesStoreRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests\Warehouses;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class WarehousesStoreRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => 'required|string',
+            'type' => 'required|string',
+            'area' => 'integer',
+            'max_historical_load' => 'integer',
+        ];
+    }
+}
